--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,11 +7,11 @@ phases:
     commands:
       - echo "Zipping deployment package..."
       - cd lib
-      - zip -r9 ../lambda.zip .
+      - zip -r9 ../deployment_package.zip .
       - cd ..
-      - zip -g lambda.zip lambda.py
+      - zip -g deployment_package.zip lambda.py
   post_build:
     commands:
       - echo "Updating lambda Function..."
-      - aws lambda update-function-code --function-name lambda-ApiFunction-O8zKYrFXyrB1 --zip-file fileb://lambda.zip
+      - aws lambda update-function-code --function-name lambda-ApiFunction-O8zKYrFXyrB1 --zip-file fileb://deployment_package.zip --region us-east-1 
       - echo "DONE!!"
